Fix scrolling issue on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -20,8 +20,8 @@
 }
 
 html {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 body {
@@ -32,8 +32,9 @@ body {
 	background-size: 256px;
 
 	color: hsl(0, 0%, 20%);
-	margin: 50px;
-	margin-top: 100px;
+	margin: 0px;
+	padding: 50px;
+	padding-top: 100px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -41,7 +42,7 @@ body {
 	font-size: 12px;
 
 	visibility: hidden;
-	overflow: hidden;
+	overflow: auto;
 }
 
 noscript {
@@ -404,7 +405,6 @@ footer>#footer-center {
 	left: 0px;
 	width: 100vw;
 	height: 100vh;
-	pointer-events: none;
 	visibility: hidden;
 }
 
@@ -432,6 +432,16 @@ footer>#footer-center {
 	max-height: 50px;
 	overflow: hidden;
 	color: black;
+}
+
+#screen-overlay {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	pointer-events: none;
 }
 
 @keyframes water-scroll {
@@ -464,6 +474,9 @@ footer>#footer-center {
 	z-index: -1;
 	animation: water-scroll 5s ease-in-out alternate infinite;
 	animation-delay: -2.5s;
+
+	pointer-events: none;
+	overflow: hidden;
 }
 
 .water>div {
@@ -498,6 +511,7 @@ footer>#footer-center {
 	transform-origin: bottom right;
 	scale: 0.2;
 	z-index: -2;
+	pointer-events: initial;
 
 	background-image: url("img/squid.png");
 	transform: rotate(-15deg);
